WIP fix collapse tables

--- a/app/styles/justa-table/_justa-table-structure.scss
+++ b/app/styles/justa-table/_justa-table-structure.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 500px;
   position: relative;
+  overflow-y: auto;
 
   table {
     border-collapse: collapse;
@@ -51,9 +52,9 @@
 
   .table-columns {
     overflow-x: auto;
-    overflow-y: auto !important;
-    height: 500px;
-    max-height: 500px;
+    // overflow-y: auto !important;
+    // height: 500px;
+    // max-height: 500px;
     position: relative;
 
     tr {
